[tool.poetry]
name = "challenge_digitas"
version = "0.0.0"
description = ""
authors = ["Maximiliano Uboldi <maxiuboldi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.1"
numpy = "^1.26.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
category-encoders = "^2.6.2"
feature-engine = "^1.6.2"
xgboost = "^2.0.1"
lightgbm = "^4.1.0"
scikit-learn = "^1.3.2"
scikit-plot = "^0.3.7"
shap = "^0.43.0"
tqdm = "^4.66.1"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"
ipywidgets = "^8.0.6"
nbformat = "^5.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
